# FYS4565-codelibrary

./: .gitignore  BeamLine.py  BeamlineElements.py  Example - BeamGeneratorLibrary.ipynb  Example - ParticleBeamManager.ipynb  ObligUtil.py  ParticleBeamManager.py  ParticleBeamPlotter.py  README.md  Util.py  beamGeneratorLibrary.py  pyproject.toml
.github/workflows/: sphinx-doc.yml
FYS4565_codelibrary/: BeamLine.py  BeamlineElements.py  ObligUtil.py  ParticleBeamManager.py  ParticleBeamPlotter.py
docs/source/: conf.py  index.rst
examples/: Example - BeamlineElements.ipynb  Example - ParticleBeamManager.ipynb
